--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/forge-theme"]
 	path = themes/forge-theme
-	url = https://github.com/ocaml/forge-theme.git
+	url = https://github.com/ocaml-forge/forge-theme.git
