Define document root for the link checker.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
       - name: Link Checker
         id: lc
         uses: peter-evans/link-checker@v1
+        with:
+          args: -r -v -d content content/*
       - name: Fail if there were link errors
         run: exit ${{ steps.lc.outputs.exit_code }}
 
