Build the website to check it with link-checker.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Check links.
+     # Checkout the repository, with submodules for the theme.
       - uses: actions/checkout@v2
+        with:
+          submodules: true
+        
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: '0.75.1'
+      
+      - name: Build website with Hugo
+        run: hugo
+        
       - name: Link Checker
         id: lc
         uses: peter-evans/link-checker@v1
         with:
-          args: -r -v -d content content/*
+          args: -r -v -d public public/*
+
       - name: Fail if there were link errors
         run: exit ${{ steps.lc.outputs.exit_code }}
 
