--- a/.github/workflows/broken-link-check.yml
+++ b/.github/workflows/broken-link-check.yml
@@ -1,14 +1,10 @@
 name: Broken Link Check
 
 on:
-  schedule:
-    - cron: 0 0 3 * *
-  workflow_dispatch:
-    types: [check-link]
+  workflow_dispatch
 
 jobs:
-  check:
-    name: Broken Link Check
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Broken Link Check
