Exclude issue links and add a timeout for broken link check.

--- a/.github/workflows/broken-link-check.yml
+++ b/.github/workflows/broken-link-check.yml
@@ -27,7 +27,7 @@ jobs:
         id: lc
         uses: peter-evans/link-checker@v1
         with:
-          args: -r -v -d public public/*
+          args: -r -x "https://github.com/ocaml-forge/forge.ocamlcore.org/issues/new/choose" -c 1 -t 30 -d public public/*
 
       - name: Fail if there were link errors
         run: exit ${{ steps.lc.outputs.exit_code }}
